helm/kube-prometheus-stack/extra/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  namespace: prometheus
  name: grafana-dashboard-ingress
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`grafana.kalexlab.xyz`)
      services:
        - name: prometheus-grafana
          port: 80
  tls:
    secretName: letsencrypt-tls-grafana
